# seisopt

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  environment.yml  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  seisopt.html
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  sphinx.yml  workflow.yml
_modules/: index.html
_modules/seisopt/config/: main.html
_modules/seisopt/tests/test_config/: test_main.html
_sources/: index.rst.txt  seisopt.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/seisopt/: index.rst.txt
_sources/autoapi/seisopt/config/: index.rst.txt
_sources/autoapi/seisopt/config/main/: index.rst.txt
_sources/autoapi/seisopt/tests/: index.rst.txt
_sources/autoapi/seisopt/tests/test_config/: index.rst.txt
_sources/autoapi/seisopt/tests/test_config/test_main/: index.rst.txt
autoapi/: index.html
autoapi/seisopt/: index.html
autoapi/seisopt/config/: index.html
autoapi/seisopt/config/main/: index.html
autoapi/seisopt/tests/: index.html
autoapi/seisopt/tests/test_config/: index.html
autoapi/seisopt/tests/test_config/test_main/: index.html
docs/: conf.py  install.rst  make.bat
seisopt/: __init__.py
seisopt/config/: main.py
seisopt/tests/test_config/: test_main.py
