[tool.poetry]
name = "seisopt"
version = "0.0.1"
description = "Seismology optimize approaches"
authors = ["OUCyf <oucyinfu@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Environment :: Console",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Physics",
    ]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
nbstripout = "^0.6.1"
pre-commit = "^3.3.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^4.5.0"
pydata-sphinx-theme = "^0.8.1"
sphinx-autoapi = "^1.8.4"
jupyter-sphinx = "^0.3.2"
sphinx-copybutton = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '.*\.py$'

[tool.isort]
profile = "black"
